maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:44: error: not enough arguments for method aMurNord: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
          if(sup<gauche && sup !=9999 && !aMurNord()){
                                                  ^ShortestPathMaze:49: error: not enough arguments for method aMurOuest: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
            if (gauche<sup && gauche != 9999 && !aMurOuest()) {
                                                          ^